--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "http": "^0.0.1-security",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10",
